<resources>
    <string name="blank"></string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_content_singleline">DUMMY CONTENT</string>
    <string name="dummy_content_number">105000</string>
    <string name="temp_productId">10252</string>
    <string name="kakao_app_key">b6e5b0618148f61889b9e77c8a9a0e90</string>
    <string name="kakao_chat_scheme">_yxolxbT</string>
    <string name="facebook_app_id">2172540836200592</string>
    <string name="fb_login_protocol_scheme">fb2172540836200592</string>
    <string name="naver_oauth_client_id">xVqkhxmKT5JReAs5tXje</string>
    <string name="naver_oauth_client_secret">ppA_6XaKuc</string>
    <string name="naver_oauth_client_name">네이버 아이디로 로그인</string>
    <string name="appcenter_release_secret">0cc1eaf2-b5b2-44a2-b9df-adafd5eb16b7</string>
    <string name="appcenter_dev_secret">4a626301-2fa4-4e3b-bdce-25bb4ea8e730</string>
    <string name="fcm_channel_id">GUHADA</string>
    <string name="fcm_channel_name">GUHADA</string>
    <string name="refresh_token_basic_key">Z3VoYWRhOmd1aGFkYWNsaWVudHNlY3JldA==</string>
    <string name="kakao_ad_track_id">510406075635482875</string>
    <string name="app_name_release">구하다</string>
    <string name="app_name_debug">구하다 Dev</string>
    <string name="app_name_qa">구하다 Qa</string>
    <string name="app_name_stage">구하다 Stage</string>
    <string name="app_logo_sub_title">쇼핑의 즐거움을 구하다</string>
    <string name="app_copyright">Ⓒ 2019 GUHADA</string>
    <string name="common_confirm">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_check">조회</string>
    <string name="common_remaining">보유</string>
    <string name="common_close">닫기</string>
    <string name="common_top">TOP</string>
    <string name="common_category">카테고리</string>
    <string name="common_brand">브랜드</string>
    <string name="common_home">홈</string>
    <string name="common_my_page">마이페이지</string>
    <string name="common_community">커뮤니티</string>
    <string name="common_show">보기</string>
    <string name="common_max">최대</string>
    <string name="common_price_format">%,2d</string>
    <string name="common_priceunit_format">%,2d원</string>
    <string name="common_pointunit_format">%,2dP</string>
    <string name="common_more">더보기</string>
    <string name="common_reset">초기화</string>
    <string name="common_color_white">#ffffff</string>
    <string name="common_format_people">%,2d명</string>
    <string name="common_format_product">%,2d개</string>
    <string name="common_format_totalproduct">총 %,2d개</string>
    <string name="common_format_brackets">[%s]</string>
    <string name="common_unit_person">명</string>
    <string name="common_unit_board">건</string>
    <string name="common_unit_price">원</string>
    <string name="common_unit_krw"></string>
    <string name="common_unit_percent">%</string>
    <string name="common_unit_product">개</string>
    <string name="common_unit_point">P</string>
    <string name="common_unit_score">점</string>
    <string name="common_week_one">1주일</string>
    <string name="common_month_one">1개월</string>
    <string name="common_month_three">3개월</string>
    <string name="common_year_one">1년</string>
    <string name="common_message_error">일시적인 오류입니다. 다시 시도해주세요.</string>
    <string name="common_message_servererror">일시적인 서버 오류입니다. 다시 시도해주세요.</string>
    <string name="common_message_timeout">서버 응답이 없습니다. 다시 시도해주세요.</string>
    <string name="common_message_ing">준비중입니다.</string>
    <string name="common_message_expiretoken">다시 로그인해주세요.</string>
    <string name="common_message_nfc_unsupported">NFC 미지원 기기입니다.</string>
    <string name="common_message_nfc_off">NFC를 켜주세요.</string>
    <string name="common_message_resendable">인증번호 재발송은 발송 1분 후에 가능합니다.</string>
    <string name="common_message_networkerror">인터넷 연결을 확인해주세요.</string>
    <string name="common_minus">-</string>
    <string name="common_plus">+</string>
    <string name="common_dot">・</string>
    <string name="common_question_mark">\?</string>
    <string name="common_exclamation_mark">!</string>
    <string name="common_free">무료</string>
    <string name="common_height">%dcm</string>
    <string name="common_weight">%dkg</string>
    <string name="order_shipping_deposit_confirm">입금확인</string>
    <string name="order_shipping_payment_complete">결제완료</string>
    <string name="order_shipping_product_authenticate">제품감정</string>
    <string name="order_shipping_product_ready">상품준비</string>
    <string name="order_shipping_ing">배송중</string>
    <string name="order_shipping_complete">배송완료</string>
    <string name="information_title_introduce">회사소개</string>
    <string name="information_title_terms">이용약관</string>
    <string name="information_title_advise">입점/제휴문의</string>
    <string name="information_title_privacy_terms">개인정보처리방침</string>
    <string name="information_title_partner">셀러오피스</string>
    <string name="information_title_as">고객센터</string>
    <string name="information_title_recruit">채용정보</string>
    <string name="information_title_claim">문의하기</string>
    <string name="information_company_info"><![CDATA[(주)구하다<br>대표자 : 윤재섭 ㅣ 개인정보보호책임자 : 최대훈<br>사업자등록번호: 876-86-01259<br>주소 : 서울특별시 강남구 논현로75길 8 비드빌딩 6층<br>통신판매업자신고 : 2019-서울강남-01814호 <u>사업자정보확인</u>]]></string>
    <string name="information_company_info2"><![CDATA[고객님은 안전거래를 위해 결제 시 저희 사이트에서 가입한 구매안전 서비스<br>(채무지급보증)을 이용하실 수 있습니다. <u>채무 보증확인</u>]]></string>
    <string name="information_company_info3"><![CDATA[<font color="#111111">고객센터</font> : <font color="#5d2ed1">1522-9839</font><br>상담가능시간 : 오전 10시 ~ 오후6시 토요일 공휴일 휴무]]></string>
    <string name="information_company_info4"><![CDATA[E-mail : help@guhada.com]]></string>
    <string name="information_company_name">(주)구하다</string>
    <string name="information_company_call">1522-9839</string>
    <string name="information_company_ceo">대표자 : 윤재섭 ㅣ 개인정보보호책임자 : 이근일</string>
    <string name="information_company_number">사업자등록번호: 876-86-01259</string>
    <string name="information_company_address">주소 : 서울특별시 강남구 논현로75길 8 비드빌딩 6층</string>
    <string name="information_company_sales_number">통신판매업자신고 : 2019-서울강남-01814호</string>
    <string name="information_description">고객님은 안전거래를 위해 결제 시 저희 사이트에서 가입한 구매안전 서비스(채무지급보증)을 이용하실 수 있습니다.</string>
    <string name="information_confirm_company">사업자정보확인</string>
    <string name="information_confirm_service">서비스 가입사실 확인</string>
    <string name="information_copyright_all">COPYRIGHT Ⓒ 2019 GUHADA ALL RIGHTS RESERVED</string>
    <string name="information_title_introduce_en">About GUHADA</string>
    <string name="information_title_terms_en">Terms of Service</string>
    <string name="information_title_advise_en">Sell on GUHADA</string>
    <string name="information_title_privacy_terms_en">Privacy Policy</string>
    <string name="information_title_partner_en">Business Inquiry</string>
    <string name="information_title_as_en">Contact Us</string>
    <string name="information_title_recruit_en">Careers</string>
    <string name="information_company_name_en">GUHADA Corporation</string>
    <string name="information_company_ceo_en">CEO : Jaeseob Yoon ㅣ Privacy Officer : Guenil Lee</string>
    <string name="information_company_number_en">Company Registration Number : 000-88-00000</string>
    <string name="information_company_address_en">Address : 8, Nonhyeon-ro 75-gil, Gangnam-gu, Seoul, Republic of Korea</string>
    <string name="information_company_sales_number_en">통신판매업자신고 : 제 2009호-서울강남-0000호</string>
    <string name="information_description_en">You can use Purchase Safety Service (Dept Payment Guarantee) from our website to pay for a safe transaction. </string>
    <string name="information_confirm_company_en">사업자정보확인</string>
    <string name="information_confirm_service_en">Learn more for more detail</string>
    <string name="information_copyright_all_en">COPYRIGHT Ⓒ 2019 GUHADA ALL RIGHTS RESERVED</string>
    <string name="side_menu_login_need">로그인 해주세요</string>
    <string name="side_menu_login_out">로그아웃</string>
    <string name="side_menu_sub_sale">세일</string>
    <string name="side_menu_sub_new_product">신상품</string>
    <string name="side_menu_sub_power_deal">파워딜</string>
    <string name="side_menu_sub_time_deal">타임딜</string>
    <string name="side_menu_sub_limit_price">한정특가</string>
    <string name="side_menu_sub_community">커뮤니티</string>
    <string name="category_all">전체보기</string>
    <string name="product_order_title">상품정렬</string>
    <string name="product_order_new_product">신상품순</string>
    <string name="product_order_marks">평점순</string>
    <string name="product_order_low_price">낮은가격순</string>
    <string name="product_order_high_price">높은가격순</string>
    <string name="product_search_detail_title">상세검색</string>
    <string name="product_price">%s원</string>
    <string name="product_price_sale_per">%d%%</string>
    <string name="product_ship_free">무료배송</string>
    <string name="product_ship_free_split">무료\n배송</string>
    <string name="product_new">새제품</string>
    <string name="product_old">빈티지</string>
    <string name="product_international">해외배송</string>
    <string name="product_coupon">쿠폰</string>
    <string name="brand_search_hint">브랜드명을 검색해주세요.</string>
    <string name="detail_search_result">검색결과 보기</string>
    <string name="detail_search_result_count">검색결과 보기(%s개)</string>
    <string name="login_hint_email">아이디 (이메일)</string>
    <string name="login_hint_password">비밀번호</string>
    <string name="login_hint_password_insert">비밀번호를 입력해주세요.</string>
    <string name="login_title">로그인</string>
    <string name="login_naver">네이버\n로그인</string>
    <string name="login_google">구글\n로그인</string>
    <string name="login_kakao">카카오\n로그인</string>
    <string name="login_facebook">페이스북\n로그인</string>
    <string name="login_findid">아이디 찾기</string>
    <string name="login_findpwd">비밀번호 찾기</string>
    <string name="login_simple">간편 로그인</string>
    <string name="login_button_signin">로그인</string>
    <string name="login_button_signup">회원가입</string>
    <string name="login_button_saveid">아이디 저장</string>
    <string name="login_button_guestorder">비회원 주문조회</string>
    <string name="login_message_wrongidformat">아이디 형태가 올바르지 않습니다.</string>
    <string name="login_message_wrongpwdformat">비밀번호는 영문과 숫자 그리고 특수문자로만 구성이 가능합니다.</string>
    <string name="login_message_wrondpwdlength">비밀번호는 8자에서 15자 사이에서만 생성할 수 있습니다.</string>
    <string name="login_message_invalidinfo">아이디 또는 비밀번호가 일치하지 않습니다.</string>
    <string name="login_message_notequalpwd">비밀번호가 일치하지 않습니다.</string>
    <string name="login_message_existemail">해당 아이디(이메일)가 이미 존재합니다.</string>
    <string name="verify_title_mobile">본인인증</string>
    <string name="verify_title_email">이메일 인증</string>
    <string name="verify_subtitle_mobile">본인 명의의 휴대폰으로\n본인인증을 진행해주세요.</string>
    <string name="verify_description1">본인명의의 휴대폰으로 본인여부를 확인합니다.</string>
    <string name="verify_description2">본인인증 서비스는 NICE신용평가정보에서 제공합니다.</string>
    <string name="verify_description3">인증수단의 명의가 다를 경우 고객센터로 문의하시기 바랍니다.</string>
    <string name="verify_description4">본인인증 시 입력한 정보는 본인확인 용도 외에는 사용되거나, 보관되지 않습니다.</string>
    <string name="verify_description5">인증비용은 구하다에서 부담합니다.</string>
    <string name="verify_button_mobile">본인 휴대폰 인증</string>
    <string name="verify_button_send">인증번호 요청</string>
    <string name="verify_button_resend">재전송</string>
    <string name="verify_hint_email">아이디 (이메일)</string>
    <string name="verify_hint_number">인증번호 (6자리 숫자 입력)</string>
    <string name="claim_write_hint">문의하실 내용을 입력하세요</string>
    <string name="claim_write_private">비공개글 설정</string>
    <string name="claim_write_description1">문의하신 내용에 대한 답변은 해당 상품의 상세페이지 또는</string>
    <string name="claim_write_description2">마이페이지 &gt; 상품문의</string>
    <string name="claim_write_description3">에서 확인하실 수 있습니다.</string>
    <string name="claim_write_button_cancel">취소</string>
    <string name="claim_write_button_submit">등록</string>
</resources>