<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="io.temco.guhada.data.viewmodel.WriteClaimViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include_writeclaim_header"
            layout="@layout/header_writeclaim" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/border_all_whitethree"
            android:gravity="start"
            android:hint="@string/claim_write_hint"
            android:padding="18dp"
            android:text="@={viewModel.inquiry.content}"
            android:textColor="@color/greyish_brown_two"
            android:textColorHint="@color/greyish"
            android:textSize="@dimen/text_13" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:background="@drawable/selector_roundcheckbox_all"
                android:button="@null"
                android:onCheckedChanged="@{(view, checked)->viewModel.onCheckedPrivate(checked)}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/claim_write_private"
                android:textColor="@color/black_four"
                android:textSize="@dimen/text_12" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="32dp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/claim_write_description1"
                android:textColor="@color/text_6"
                android:textSize="@dimen/text_13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/claim_write_description2"
                android:textColor="@color/text_8"
                android:textSize="@dimen/text_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/claim_write_description3"
                android:textColor="@color/text_6"
                android:textSize="@dimen/text_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/WriteClaimButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/greyish_brown_two"
                android:onClick="@{()-> viewModel.onClickBack()}"
                android:text="@string/claim_write_button_cancel" />

            <Button
                style="@style/WriteClaimButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.onClickSubmit()}"
                android:background="@color/colorPrimary"
                android:text="@string/claim_write_button_submit" />
        </LinearLayout>
    </LinearLayout>
</layout>